--- a/client/src/components/Cart/cart.scss
+++ b/client/src/components/Cart/cart.scss
@@ -25,7 +25,6 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  flex-wrap: wrap;
   border-bottom: 1px solid  #e5e5e5;
   padding: 20px 0;
   width: 100%;
@@ -89,7 +88,7 @@
   font-weight: 700;
 
   &.price {
-    width: 100px;
+    max-width: 100px;
     @include max-width($landscape-tablet){
       width: auto;
     }
