--- a/client/src/components/ScrollBtn/ScrollBtn.scss
+++ b/client/src/components/ScrollBtn/ScrollBtn.scss
@@ -1,7 +1,7 @@
 .scroll {
   display: block;
-  opacity: 0.3;
-  background-color: rgb(88, 88, 88);
+  opacity: 0.4;
+  background-color: #2B2B2B;
   width: 70px;
   height: 70px;
   border-radius: 50%;
@@ -11,7 +11,10 @@
   border: none;
   z-index: 999999;
   outline: none;
-  color: #ffffff;
+  color: #fff;
+  font-weight: 700;
+  font-size: 16px;
+
 
   &:hover {
     opacity: 1;
