--- a/client/src/components/Cart/cart.scss
+++ b/client/src/components/Cart/cart.scss
@@ -25,6 +25,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  flex-wrap: wrap;
   border-bottom: 1px solid  #e5e5e5;
   padding: 20px 0;
   width: 100%;
@@ -88,7 +89,7 @@
   font-weight: 700;
 
   &.price {
-    max-width: 100px;
+    width: 10%;
     @include max-width($landscape-tablet){
       width: auto;
     }
@@ -133,6 +134,7 @@
   margin: 0 auto;
   display: flex;
   align-items: center;
+  width: 80%;
 
   input {
     @include clear-default-inputs-style;
