--- a/client/src/components/TopBlockAuth/authorization.scss
+++ b/client/src/components/TopBlockAuth/authorization.scss
@@ -62,6 +62,11 @@
 .user-info-mini {
   display: flex;
   align-items: center;
+  justify-content: space-between;
+  padding: 5px;
+  border-radius: 6px;
+  border: 1px solid #000;
+  margin-right: 15px;
 }
 
 .user-name {
@@ -71,9 +76,8 @@
 .user-avatar-mini {
   display: inline-block;
   position: relative;
-  width: 30px;
+  width: 20px;
   margin-left: 15px;
-  margin-right: 30px;
   cursor: pointer;
 
   &-img {
@@ -85,6 +89,7 @@
 
 .product-cart-ico {
   position: relative;
+  top: 4px;
   display: inline-block;
   height: 30px;
   width: 30px;
