--- a/client/src/components/AdminDashboard/AdmNavMenu/admNavMenu.scss
+++ b/client/src/components/AdminDashboard/AdmNavMenu/admNavMenu.scss
@@ -187,3 +187,10 @@
 .admin-nav-menu-submit:focus {
   background-color: #3af300;
 }
+
+.nav-menu-result-message {
+  margin-top: 30px;
+  width: 100%;
+  padding: 20px;
+  border: 1px dashed #888888;
+}
