--- a/client/src/components/ProductPage/product-page.scss
+++ b/client/src/components/ProductPage/product-page.scss
@@ -9,6 +9,7 @@
     @include max-width($landscape-tablet) {
       flex-direction: column;
       margin-bottom: 48px;
+      padding-top: 60px;
     }
   }
 
