--- a/client/src/components/TopBlockAuth/LoginForm/LoginForm.scss
+++ b/client/src/components/TopBlockAuth/LoginForm/LoginForm.scss
@@ -55,15 +55,17 @@
   width: 100%;
 }
 .login-cancel-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  align-self: flex-end;
   width: 30px;
   height: 30px;
   border-radius: 50%;
-  background: url("https://img.icons8.com/ios/50/000000/delete-sign.png") no-repeat;
-  background-position: 7.5px 7px;
-  background-size: 15px;
   background-color: rgba(0, 0, 0, 0.08);
-  align-self: flex-end;
   margin: 15px 15px 0;
+  font-size: 16px;
+  line-height: 1;
   cursor: pointer;
 }
 
