--- a/client/src/components/TopBlockAuth/authorization.scss
+++ b/client/src/components/TopBlockAuth/authorization.scss
@@ -29,28 +29,22 @@
 
 .header-dropdown-login-details {
   background-color: #fff;
-  border-radius: 6px;
-  padding: 25px;
   display: flex;
   flex-direction: column;
   position: absolute;
-  top: 55px;
-  left: 15px;
+  top: 35px;
+  right: 15px;
   z-index: 1;
-  border: 1px solid #ccc;
-  box-shadow: 0, 0, 10px, 10px #ccc;
 
   &-item {
     display: block;
-    height: 30px;
-    width: 120px;
+    padding: 25px;
+    min-width: 180px;
     font-size: 17px;
     color: #000;
     background-color: #fff;
-    padding-left: 5px;
-    padding-top: 5px;
     text-transform: uppercase;
-    //border: 1px solid #ccc;
+    border-bottom: 1px solid #ccc;
   }
 
   &-item:hover {
