--- a/client/src/components/Header/header.scss
+++ b/client/src/components/Header/header.scss
@@ -6,9 +6,7 @@
 }
 
 .header-content {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+  @include flex-center-between;
   padding: 24px 0;
 }
 
