--- a/client/src/components/ProductListing/ProductListing.scss
+++ b/client/src/components/ProductListing/ProductListing.scss
@@ -61,6 +61,7 @@
     .product-item {
       display: block;
       max-width: 263px;
+      max-height: 440px;
       width: 100%;
       text-align: center;
       margin-bottom: 30px;
