--- a/client/src/components/StaticPages/static-pages.scss
+++ b/client/src/components/StaticPages/static-pages.scss
@@ -14,9 +14,7 @@ body {
 
 .about-us {
   &-wrapper {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+    @include flex-wrap-between;
     @media (max-width: 600px) {
       flex-direction: column;
     }
