--- a/client/src/components/FilteredProductList/Filters/ColorFilter/color-filter.scss
+++ b/client/src/components/FilteredProductList/Filters/ColorFilter/color-filter.scss
@@ -61,9 +61,7 @@
 }
 
 .color-filter-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  @include flex-center-between;
   margin-bottom: 20px;
 }
 
