--- a/client/src/components/Profile/Profile.scss
+++ b/client/src/components/Profile/Profile.scss
@@ -103,8 +103,9 @@
 
 
   &-content {
-    padding-left: 135px;
-    padding-top: 25px;
+    margin-left: 35px;
+    margin-top: 20px;
+    width: auto;
 
 
     &-label {
