--- a/client/src/scss/resources/_dark.scss
+++ b/client/src/scss/resources/_dark.scss
@@ -11,8 +11,10 @@
 .checkout-delivery-content-input,
 .checkout-delivery-method,
 .checkout-delivery-details,
-.checkout-product-item {
-  border:1px solid #000;
+.checkout-product-item,
+.checkout-payment-exp-input,
+.size-item {
+  border: 1px solid #000;
 }
 
 .header-dropdown-login-details{
