--- a/client/src/components/AdminDashboard/AdmProducts/admProducts.scss
+++ b/client/src/components/AdminDashboard/AdmProducts/admProducts.scss
@@ -220,6 +220,11 @@
 
   &-image {
     height: 140px;
+
+    &-dublicate {
+      border: 1px solid red;
+      box-shadow: 0px 0px 5px 0px rgba(250, 25, 5, 1);
+    }
   }
 }
 
@@ -231,6 +236,11 @@
   border: 1px solid #000000;
   cursor: pointer;
   transition: all 0.4s ease;
+
+  &-dublicate {
+    border: 1px solid red;
+    color: red;
+  }
 
   &:hover,
   &:focus {
