--- a/client/src/components/AdminDashboard/AdmSizes/admSizes.scss
+++ b/client/src/components/AdminDashboard/AdmSizes/admSizes.scss
@@ -73,11 +73,14 @@
   }
 
   &-heading {
-    // padding: 20px;
     height: 50px;
     line-height: 50px;
     text-align: center;
     border-bottom: 1px solid #888888;
+  }
+
+  &-error {
+    color: red;
   }
 
   &-item {
