--- a/client/src/scss/resources/_dark.scss
+++ b/client/src/scss/resources/_dark.scss
@@ -4,6 +4,10 @@
   }
 }
 
+.breadcrumbs-section{
+  box-shadow: 0 2px 2px 1px #ababab;
+}
+
 .main-search,
 .subscribe-email,
 .header-dropdown-login-details,
