--- a/client/src/components/ProductPage/ProductInfo/product-info.scss
+++ b/client/src/components/ProductPage/ProductInfo/product-info.scss
@@ -1,4 +1,4 @@
-@import '../../../scss/resources/resources';
+@import "../../../scss/resources/resources";
 .product {
   &-title {
     font-size: 32px;
