--- a/client/src/components/BreadCrumbs/breadcrumbs.scss
+++ b/client/src/components/BreadCrumbs/breadcrumbs.scss
@@ -32,5 +32,10 @@
     line-height: 40px;
     color: $black;
     text-transform: uppercase;
+
+    &:active,
+    &:hover {
+      color: #ff6008;
+    }
   }
 }
