--- a/client/src/scss/resources/_dark.scss
+++ b/client/src/scss/resources/_dark.scss
@@ -17,7 +17,8 @@
 .checkout-delivery-details,
 .checkout-product-item,
 .checkout-payment-exp-input,
-.size-item {
+.size-item
+ {
   border: 1px solid #000;
 }
 
@@ -33,7 +34,8 @@
   opacity: 1;
 }
 
-.header-dropdown-login-details-item {
+.header-dropdown-login-details-item,
+.basket-item {
   border-bottom: 1px solid #000;
 }
 
