--- a/client/src/components/Checkout/Modals/UnsuccessOrder/UnsuccessOrder.scss
+++ b/client/src/components/Checkout/Modals/UnsuccessOrder/UnsuccessOrder.scss
@@ -1,11 +1,7 @@
 .modal-unsuccess-order {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  //height: 120px;
+  position: relative;
   width: 500px;
-  background-color: #efefef;
+  background-color: #fff;
   border: 2px solid #ccc;
   border-radius: 5px;
   padding: 34px 20px;
@@ -27,9 +23,9 @@
     text-transform: uppercase;
   }
 
-  &-title{
-    margin: 15px 0;
-    line-height: 1.5;
+  &-title {
+    margin: 15px 0 10px;
+    line-height: 1.3;
   }
 
   .login-cancel-btn{
