--- a/client/src/components/FilteredProductList/Filters/ColorFilter/color-filter.scss
+++ b/client/src/components/FilteredProductList/Filters/ColorFilter/color-filter.scss
@@ -67,11 +67,11 @@
 
 .reset-color-filters {
   position: relative;
-  padding: 7px;
+  padding: 9px 17px;
   border-radius: 100px;
   background-color: #33333a;
   font-family: "OpenSans", sans-serif;
-  font-size: 11px;
+  font-size: 14px;
   font-weight: bold;
   text-align: center;
   text-transform: uppercase;
