--- a/client/src/components/ScrollBtn/ScrollBtn.scss
+++ b/client/src/components/ScrollBtn/ScrollBtn.scss
@@ -1,6 +1,10 @@
 .scroll {
-  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 6px;
   opacity: 0.4;
+  line-height: 34px;
   background-color: #2B2B2B;
   width: 50px;
   height: 50px;
@@ -14,7 +18,6 @@
   color: #fff;
   font-weight: 700;
   font-size: 38px;
-
 
   &:hover {
     opacity: 1;
