--- a/client/src/components/TopBlockAuth/RegistrationForm/RegistrationForm.scss
+++ b/client/src/components/TopBlockAuth/RegistrationForm/RegistrationForm.scss
@@ -77,26 +77,26 @@
 
   .login-area {
     width: 100%;
-    background-color: rgba(0, 0, 0, 0.08);
-    height: 93px;
+    background-color: #33333a;
+    height: 83px;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 35px;
+    margin-top: 15px;
 
     .login_btn {
       width: 270px;
       height: 50px;
       border-radius: 25px;
-      border: 1px solid #33333a;
+      border: 1px solid #fff;
       text-align: center;
       cursor: pointer;
       text-transform: uppercase;
       font-size: 12px;
       margin-top: 0;
       padding-top: 16px;
-      background-color: rgba(0, 0, 0, 0.08);
-      color: #33333a;
+      background-color: #fff;
+      color: #fff;
     }
   }
 
