--- a/client/src/components/TopBlockAuth/authorization.scss
+++ b/client/src/components/TopBlockAuth/authorization.scss
@@ -25,6 +25,12 @@
   border-radius: 3px;
   padding: 3px 15px;
   cursor: pointer;
+
+  &:active,
+  &:hover {
+    color: #ff6008;
+    border: 1px solid #ff6008;
+  }
 }
 
 .header-dropdown-login-details {
@@ -104,7 +110,7 @@
     top: -10px;
     right: -12px;
     color: $red;
-    font-size: 14px;
+    font-size: 18px;
     font-weight: 700;
   }
 }
