--- a/client/src/components/atomic/BtnAddToCart/btn-add-to-cart.scss
+++ b/client/src/components/atomic/BtnAddToCart/btn-add-to-cart.scss
@@ -9,10 +9,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 12px;
+  font-size: 16px;
   line-height: 20px;
   letter-spacing: 2px;
   color: #fff;
+  font-weight: 700;
   text-transform: uppercase;
   border-radius: 25px;
   border: none;
