--- a/client/src/components/FilteredProductList/filteredProductList.scss
+++ b/client/src/components/FilteredProductList/filteredProductList.scss
@@ -40,11 +40,20 @@
 }
 
 .previous-price {
+  position: relative;
   display: inline-block;
   margin-left: 30px;
   font-size: 13px;
   color: gray;
-  text-decoration: line-through;
+
+  &:before{
+    border-bottom: 1px solid gray;
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 50%;
+    transform: rotate(-7deg);
+  }
 }
 
 .listing-products {
