--- a/client/src/components/ProductPage/ProductInfo/product-info.scss
+++ b/client/src/components/ProductPage/ProductInfo/product-info.scss
@@ -23,10 +23,19 @@
     margin-bottom: 18px;
 
     &-previous {
+      position: relative;
       font-size: 16px;
       margin-bottom: 18px;
       color: #888888;
-      text-decoration: line-through;
+      
+       &:before {
+        border-bottom: 1px solid #888888;
+        position: absolute;
+        content: "";
+        width: 100%;
+        height: 50%;
+        transform: rotate(-7deg);
+      }
     }
   }
 
