--- a/client/src/components/ProductsCarousel/products-carousel.scss
+++ b/client/src/components/ProductsCarousel/products-carousel.scss
@@ -30,7 +30,15 @@
     top: 72px;
     color: $black;
     font-size: 20px;
-    text-decoration: line-through;
+
+    &:before {
+      border-bottom: 2px solid $black;
+      position: absolute;
+      content: "";
+      width: 100%;
+      height: 50%;
+      transform: rotate(-7deg);
+    }
 
     @include max-width($landscape-tablet) {
       left: 30px;
