--- a/client/src/components/FilteredProductList/Filters/CategoryFilter/category-filter.scss
+++ b/client/src/components/FilteredProductList/Filters/CategoryFilter/category-filter.scss
@@ -23,9 +23,10 @@
       &-title {
         display: inline-block;
         font-family: $font-openSans;
-        font-size: 14px;
+        font-size: 16px;
+        font-weight: 700;
         letter-spacing: 1px;
-        color: $black;
+        color: black;
         text-transform: uppercase;
         margin-bottom: 15px;
         position: relative;
@@ -53,7 +54,7 @@
 
           .further-sub-category-link {
             font-family: $font-openSans;
-            font-size: 14px;
+            font-size: 16px;
             letter-spacing: 1px;
             color: $black;
             text-transform: uppercase;
