--- a/client/src/components/atomic/BtnAddToCart/btn-add-to-cart.scss
+++ b/client/src/components/atomic/BtnAddToCart/btn-add-to-cart.scss
@@ -9,7 +9,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 12px;
+  font-size: 16px;
+  font-weight: 700;
   line-height: 20px;
   letter-spacing: 2px;
   color: #fff;
