add text when click add product

--- a/client/src/components/atomic/BtnAddToCart/btn-add-to-cart.scss
+++ b/client/src/components/atomic/BtnAddToCart/btn-add-to-cart.scss
@@ -19,3 +19,10 @@
   border: none;
   cursor: pointer;
 }
+
+.click-status-text {
+  text-transform: initial;
+  margin: 10px;
+  color: green;
+  height: 20px;
+}
