--- a/client/src/components/Checkout/Checkout.scss
+++ b/client/src/components/Checkout/Checkout.scss
@@ -14,9 +14,19 @@
 .checkout {
   width: 60%;
 
+  @include max-width($landscape-tablet){
+    width: 100%;
+    margin-top: 35px;
+  }
+
+
   &-d-flex-row {
     @include flex-between;
     flex-direction: row;
+
+    @include max-width($landscape-tablet){
+      flex-direction: column;
+    }
   }
 
   &-product-list {
@@ -84,7 +94,16 @@
 
     &-big {
       width: 65%;
+
+      @include max-width($landscape-tablet){
+        width: 100%;
+      }
     }
+
+    @include max-width($landscape-tablet){
+      width: 100%;
+    }
+  
   }
 
   &-delivery-details {
@@ -197,14 +216,22 @@
 
   &-below-block {
     display: flex;
-    flex-direction: row;
     width: 90%;
+
+    @include max-width($landscape-tablet){
+      width: 100%;
+      flex-direction: column;
+    }
   }
 
   &-expdate-block {
     display: flex;
     flex-direction: column;
     width: 50%;
+
+    @include max-width($landscape-tablet){
+      width: 100%;
+    }
   }
 
   &-exp {
