--- a/client/src/components/Checkout/Modals/SuccessOrder/SuccessOrder.scss
+++ b/client/src/components/Checkout/Modals/SuccessOrder/SuccessOrder.scss
@@ -10,6 +10,12 @@
   padding: 25px 45px;
   text-align: center;
 
+  @media screen and (max-width: 500px){
+    min-width: auto;
+    padding: 25px;
+    width: 95%;
+  }
+
   &-text {
     margin-bottom: 10px;
 
